# FastMathArt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  example.py  setup.py
.github/workflows/: cmake-multi-platform.yml
fastmathart/: __init__.py  api_bindings.cpp  api_bindings.h  api_bindings.py  basic_animation.py  cbindings.cpp  cbindings.py  color.py  config.py  const.py  properties.py  render.cpp  render.h  render.py  scene.py  shapes.py  wait.py
fastmathart/math/: bezier.h  vec.h
fastmathart/utils/: cWrapper.h  pixelUtils.cpp  pixelUtils.h
tests/: bezier_test.cpp  does_it_run.cpp  include_all_tests.h  main.cpp
